# vulkan_struct_creator

./: .gitignore  CMakeLists.txt  generator.py  vulkan_struct_creator.h
include/: vk_struct_creator.h  vulkan_struct_creator.h
src/: vulkan_struct_creator.c
